# projected-interface-builder

./: .gitignore  CMakeLists.txt  README.md  interface_builder.py  interface_code_gen.py  manifest.xml  package.xml  physical_copy.pkl  physical_copy_choices.pkl  physical_copy_choices_extended.pkl  physical_copy_choices_new.pkl  rosdoc.yaml  setup.py  tv.pkl
cfg/: InterfaceAdjustments.cfg
launch/: ar_pose.launch  interface_standalone.launch  prerequisites_simple+ar.launch
src/projected_interface_builder/: __init__.py  _if_objects.py  colors.py  convert_utils.py  data_structures.py  geometry_utils.py  modes.py  projected_interface.py
test_interfaces/: Py9.py  make_bigram_dict.py  physical_copy.py  projected_letterboard.py  tv.py
test_interfaces/interfaces/: letterboard_pie.pkl  lightswitch.pkl  physical_copy.pkl  physical_copy_choices.pkl  physical_copy_choices_new.pkl
test_interfaces/nodes/: Py9.py  lightswitch.py  projected_letterboard.py  tv.py
